# MediaClinaer

./: .gitignore  MediaClinaer.spec  README.md  build_exe.bat  pyproject.toml
docs/: 01_requirements.md  02_basic_design.md  03_project_plan.md  04_detailed_design.md
src/media_clinaer/: app_context.py  main.py
src/media_clinaer/analysis/: __init__.py  blur_detector.py  hashing.py  image_similarity.py
src/media_clinaer/config/: __init__.py  manager.py  models.py
src/media_clinaer/detection/: __init__.py  blurry_detector.py  duplicate_detector.py  group_builder.py  similar_detector.py
src/media_clinaer/logging/: __init__.py  events.py  logger.py
src/media_clinaer/models/: __init__.py  detection_group.py  media_file.py  quarantine_record.py  scan_session.py
src/media_clinaer/quarantine/: __init__.py  executor.py  manifest.py  planner.py
src/media_clinaer/scanner/: __init__.py  file_collector.py  metadata_reader.py  path_utils.py
src/media_clinaer/services/: __init__.py  cache_service.py  detection_service.py  quarantine_service.py  result_service.py  scan_service.py
src/media_clinaer/storage/: __init__.py  database.py  migrations.py  repositories.py
src/media_clinaer/ui/: __init__.py  main_window.py  workers.py
tests/: image_helpers.py
tests/unit/: test_app_context.py  test_blur_detector.py  test_config_manager.py  test_database.py  test_detection_service.py  test_duplicate_detector.py  test_hashing.py  test_json_line_logger.py  test_path_utils.py  test_quarantine_service.py  test_result_service.py  test_scan_service.py  test_similar_detector.py
