[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "media-clinaer"
version = "0.1.0"
description = "Windows portable media cleanup tool."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.7",
    "Pillow>=10.0",
    "ImageHash>=4.3",
    "opencv-python>=4.9",
    "tzdata>=2025.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
media-clinaer = "media_clinaer.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
